tests/compile_fail/call-eq.stderr
error: invalid argument
 --> $DIR/call-eq.rs:7:12
  |
7 |     #[call = "len"]
  |            ^
